# alsi-py

./: .buildinfo  .bumpversion.cfg  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  alsi.html  constraints.txt  genindex.html  index.html  modules.html  objects.inv  pandas_client_test.py  py-modindex.html  raw_client_test.py  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  test.py
.github/workflows/: github-pipeline.yml
_sources/: alsi.rst.txt
alsi/: VERSION  exceptions.py  mappings.py  pandas_client.py  raw_client.py  timefilter.py
docs/: alsi.rst  conf.py  index.rst  modules.rst  roiti.rst  roitigie.rst
gie/: agsi_mappings.py  alsi_mappings.py  exceptions.py  gie_pandas_client.py  gie_raw_client.py  lookup_functions.py
gie/mappings/: __init__.py  agsi_company.py  agsi_country.py  agsi_facility.py  alsi_company.py  alsi_country.py  alsi_facility.py  api_mappings.py  lookup_functions.py
gie_py/: test_file.py  test_pandas_client.py  test_raw_client.py
gie_py/gie/: agsi_mappings.py  alsi_mappings.py  gie.py
roiti/: gie_pandas_client.py  gie_raw_client.py  lookup_functions.py
roitigie/: exceptions.py  gie_pandas_client.py  gie_raw_client.py  lookup_functions.py
roitigie/mappings/: agsi_company.py  alsi_company.py  api_mappings.py
sphinx/: modules.rst
src/roiti/gie/: __init__.py  gie_pandas_client.py  gie_raw_client.py  lookup_functions.py
src/roiti/gie/mappings/: agsi_company.py  agsi_facility.py  alsi_country.py  alsi_facility.py  api_mappings.py
tests/: test_pandas_client.py  test_raw_client.py
