[metadata]
name = roiti.gie
version = 0.0.3
author = Roiti LTD 
author_email = ppetrov@roiti.com
maintainer_email = ppetrov@roiti.com, ntoshev@roiti.com
description = A library to query GIE ALSI/AGSI data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    roitigie=roitigie
packages = find:
install_requires = 
    aiohttp>=3.8.0,<4.0.0
    pandas>=1.0
python_requires = >=3.8

[options.packages.find]
include = roitigie*