[metadata]
name = roiti_gie
version = file: src/roiti/gie/VERSION
author = Roiti Ltd.
author_email = opensource@roiti.com
maintainer_email = opensource@roiti.com
description = A library to query GIE ALSI/AGSI data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    aiohttp>=3.8.0,<4.0.0
    pandas>=1.0
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
roiti.gie =
    VERSION
